@startuml
package common {
    class Subject {
        + UUID uuid
        ..Names..
        + Slug slug
        + String name
        + CSSColor color
        ..Grades..
        + Float weight
        + Float goal
        ..Defaults..
        + String room
    }

    enum valueType {
        DATE
        TIME
        DATETIME
        TIMERANGE
        DATERANGE
        SELECT
        TEXT
        INTEGER
        FLOAT
        BOOLEAN
    }

    class SettingDefinition {
        ..Naming..
        + String name
        + String key
        + String category
        + String description
        ..Value definition..
        + valueType type
        + Boolean multiple
        + String default
        + Boolean optional
    }

    class Setting {
        + String value
    }

    class User {
        + String username
        - Password password
        + Email email
        + Boolean is_superuser
        + Date joined
        + Date last_login
        + IPAddress ip_address
    }
}
package Learn {
    enum Filetype {
        MARKDOWN
        ASCIIDOC
        STUDENTML
        HTML
    }

    class Note {
        + UUID uuid
        + String name
        ---------------
        + Text content
        + Path filetype
        + Date last_modified
        + Date added
        + Filetype filetype
    }

    class Learndata {
        + UUID uuid
        + Text data
        + Float progress
        + Integer test_tries
        + Integer train_tries
        + Duration time_spent
        + Date opened
        + Date added
        + Date modified
    }
}

package Schedule {
    
    enum Weektype {
        Q1
        Q2
        BOTH
    }

    enum MutationType {
        EDT
        ADD
        DEL
        RES
    }

    class DateTimeRange<< (T,cyan) >> {
        + DateTime start
        + DateTime end
    }

    class Event {
        + UUID uuid
        + Time start
        + Time end
        + Integer day
        + Weektype week_type
    }
    
    class Mutation {
        + DateTimeRange deleted
        + DateTimeRange rescheduled
        + String room
        + MutationType type()
    }
}

package Homework {
    class Grade {
        + UUID uuid
        + String name
        ..Values..
        + Float actual
        + Float expected
        + Float goal
        + Float maximum
        + Float weight
        ..Dates..
        + Date added
        + Date obtained
    }

    enum HomeworkType {
        TEST
        COURSEWORK
        TOBRING
        EXERCISE
    }

    class Homework {
        + UUID uuid
        + String name
        + Float progress
        + HomeworkType type
        + String room
        ..Dates..
        + Date due
        + Date added
        + Date completed
    }
}

package reports {
    enum ReportType {
        FEATURE
        BUG
    }

    enum Device {
        PHONE
        TABLET
        LAPTOP
        DESKTOP
        SMARTWATCH
        OTHER
    }

    class Report {
        + UUID uuid
        ..metadata..
        + ReportType report_type
        + Boolean put_on_github
        + Boolean send_by_mail
        + ISO639_1Code language
        ..dates..
        + DateTime added
        + DateTime happened
        ..description..
        + HTMLString message
        ..troubleshooting metadata..
        + URL current_url
        + String browser
        + String os
        + Device device
        + GithubIssue as_github_issue()
    }
}

User --> Subject
User --> Setting
User --> Report
SettingDefinition --> Setting

Subject ..> Note
Subject ..> Homework
Subject ..> Event
Subject ..> Learndata
Subject ..> Grade

Note <--> "0..*" Learndata
Homework <--> "0..*" Grade
Homework <--> "0..*" Note
Event --> "0..*" Mutation

Event -[hidden]> Note
Note -[hidden]> Homework
@enduml
